--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-top: 30px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.main {
+  background-color: #000;
+    border: 2px solid #000;
+    width: 682px;
+    height: 567px;
+    margin: 0 auto;
+    border-radius: 10px;
+    padding: 20px;
+    position: relative;
+}
+
+.title {
+  color: lightslategrey;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.text{
+  margin: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.img{
+ border: 1px solid lightslategrey;
+    height: 370px;
+    width: 485px;
+    margin: 0 auto;
+}
+
+.img img {
+  height: 339px;
+  margin: 0 auto;
+}
+.title1{
+  position: absolute;
+    color: lightslategrey;
+    bottom: 163px;
+    right: 403px;
+    font-size: 47px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.title2{
+      position: absolute;
+    color: lightslategrey;
+    bottom: 163px;
+    right: 293px;
+    font-size: 47px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+} */
